--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,9 +22,8 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-url: https://luciorq.github.io/txGeneNetwork, https://github.com/luciorq/txGeneNetwork
 VignetteBuilder: knitr
 Workflow: true
 biocViews: GeneExpressionWorkflow, AnnotationWorkflow
-URL: https://github.com/luciorq/txGeneNetwork
+URL: https://luciorq.github.io/txGeneNetwork, https://github.com/luciorq/txGeneNetwork
 BugReports: https://github.com/luciorq/txGeneNetwork/issues
