--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,8 @@ RoxygenNote: 7.1.1
 VignetteBuilder: knitr
 Workflow: true
 biocViews: GeneExpressionWorkflow, RNASeq, Network, GeneSetEnrichment, Visualization
-URL: https://luciorq.github.io/txGeneNetwork, https://github.com/luciorq/txGeneNetwork
-BugReports: https://github.com/luciorq/txGeneNetwork/issues
+URL: https://villabioinfo.github.io/txGeneNetwork, https://github.com/villabioinfo/txGeneNetwork
+BugReports: https://github.com/villabioinfo/txGeneNetwork/issues
 Imports: 
     tibble,
     ggplot2,
