--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Config/testthat/edition: 3
 VignetteBuilder: knitr
 Workflow: true
 biocViews: GeneExpressionWorkflow, RNASeq, Network, GeneSetEnrichment, Visualization
@@ -43,4 +44,6 @@ Suggests:
     concaveman,
     readr,
     tidyr,
-    rmarkdown
+    rmarkdown,
+    testthat,
+    vdiffr
